--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 
 
 // Base imports
+@import "component/page/edit";
 @import "component/search";
 @import "component/calendar";
 @import "base/base";
